dark mode link color fix

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@
 .latex-dark {
   --body-color: hsl(0, 0%, 86%);
   --body-bg-color: hsl(0, 0%, 16%);
-  --link-visited: hsl(196 80% 77%);
+  --link-visited: hsl(0, 55%, 55%);
   --link-focus-outline: hsl(215, 63%, 73%);
   --pre-bg-color: hsl(0, 1%, 25%);
   --kbd-bg-color: hsl(0, 0%, 16%);
@@ -138,7 +138,7 @@
    .latex-dark-auto {
     --body-color: hsl(0, 0%, 86%);
     --body-bg-color: hsl(0, 0%, 16%);
-    --link-visited: hsl(196 80% 77%);
+    --link-visited: hsl(0, 55%, 55%);
     --link-focus-outline: hsl(215, 63%, 73%);
     --pre-bg-color: hsl(0, 1%, 25%);
     --kbd-bg-color: hsl(0, 0%, 16%);
